<resources>
    <string name="app_name">BlokBela</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="us">Mi</string>
    <string name="they">Oni</string>
    <string name="trump">Zvali adut:</string>
    <string name="bela">Bela</string>
    <string name="call">Zvanje:</string>
    <string name="add">Dodaj bodove</string>
    <string name="game">Game</string>
    <string name="score">Score</string>
    <string name="rezultat">Rezultat</string>
    <string name="bodovi">Bodovi</string>
    <string name="redniBroj">RB.</string>
    <string name="dealers">Dealer</string>
</resources>